--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "authenticate-me": "file:..",
+    "date-fns": "^2.23.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hero-icon": "^0.0.7",
     "react-redux": "^7.2.5",
