--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "authenticate-me": "file:..",
     "date-fns": "^2.23.0",
+    "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
