added map but not functioning, yet

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "authenticate-me": "file:..",
     "date-fns": "^2.23.0",
     "framer-motion": "^4.1.17",
+    "geolib": "^3.3.1",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hero-icon": "^0.0.7",
+    "react-map-gl": "^6.1.17",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
