--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hero-icon": "^0.0.7",
+    "react-loading": "^2.0.3",
     "react-map-gl": "^6.1.17",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
