added faker reviews to showcase feature, was hidden, and also added more fake bookings to showcase sortment by past and future bookings

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "airBnbClone",
-  "name": "Pawan - airBnbClone",
+  "name": "Pawan's airBnbClone",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
